--- a/app/src/main/res/layout/fragment_edit_product.xml
+++ b/app/src/main/res/layout/fragment_edit_product.xml
@@ -12,14 +12,14 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white_A700"
-        android:padding="24dp">
+        android:background="@color/white_A700">
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvHeader"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                android:layout_margin="24dp"
                 android:orientation="horizontal">
                 <ImageView
                     android:id="@+id/imageChevronleft"
@@ -58,7 +58,7 @@
                     android:fillViewport="true"
                     android:orientation="vertical"
                     android:layout_marginTop="24dp"
-                    android:layout_marginBottom="14dp"
+                    android:layout_marginBottom="8dp"
                     app:layout_constraintVertical_bias="0.0">
                     <LinearLayout
                         android:orientation="vertical"
@@ -73,6 +73,7 @@
                             android:text="@={viewModel.selectedProperty.name}"
                             android:backgroundTint="@color/orange_400"
                             android:textCursorDrawable="@color/orange_400"
+                            android:layout_marginHorizontal="24dp"
                             tools:text="Pizza"/>
                         <TextView
                             android:id="@+id/tvDescription"
@@ -82,6 +83,7 @@
                             android:textSize="20sp"
                             android:textStyle="bold"
                             android:text="Description:"
+                            android:layout_marginHorizontal="24dp"
                             tools:ignore="HardcodedText"/>
                         <com.google.android.material.textfield.TextInputLayout
                             android:layout_width="match_parent"
@@ -89,6 +91,7 @@
                             app:hintTextColor="@color/lightOrange"
                             app:boxStrokeColor="@color/lightOrange"
                             android:layout_marginTop="12dp"
+                            android:layout_marginHorizontal="24dp"
                             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                             <com.google.android.material.textfield.TextInputEditText
@@ -109,7 +112,8 @@
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp">
+                            android:layout_marginTop="8dp"
+                            android:layout_marginHorizontal="24dp">
                             <TextView
                                 android:id="@+id/tvCurrentPrice"
                                 android:layout_width="wrap_content"
@@ -139,7 +143,8 @@
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginVertical="8dp">
+                            android:layout_marginVertical="8dp"
+                            android:layout_marginHorizontal="24dp">
                             <TextView
                                 android:id="@+id/tvOldPrice"
                                 android:layout_width="wrap_content"
@@ -166,19 +171,19 @@
                                 tools:text="15.00"
                                 tools:ignore="HardcodedText"/>
                         </androidx.constraintlayout.widget.ConstraintLayout>
-                            <TextView
-                                android:id="@+id/tvIngredients"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textColor="@color/black"
-                                android:textSize="20sp"
-                                android:textStyle="bold"
-                                android:text="Ingredients: "
-                                tools:ignore="HardcodedText"/>
+                        <TextView
+                            android:id="@+id/tvIngredients"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/black"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            android:text="Ingredients: "
+                            android:layout_marginHorizontal="24dp"
+                            tools:ignore="HardcodedText"/>
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="12dp">
+                            android:layout_height="wrap_content">
                             <EditText
                                 android:id="@+id/etIngredient"
                                 android:layout_width="wrap_content"
@@ -188,17 +193,22 @@
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
                                 app:layout_constraintBottom_toBottomOf="parent"
+                                android:layout_marginStart="24dp"
+                                android:layout_marginVertical="12dp"
                                 android:hint="Enter Ingredient"
                                 android:text="@={viewModel.ingredient}"
                                 tools:ignore="HardcodedText"/>
-                            <androidx.appcompat.widget.AppCompatButton
+                            <com.google.android.material.button.MaterialButton
                                 android:id="@+id/btn_add_ingredient"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 app:layout_constraintTop_toTopOf="@id/etIngredient"
                                 app:layout_constraintBottom_toBottomOf="@id/etIngredient"
                                 app:layout_constraintEnd_toEndOf="parent"
-                                android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_8"
+                                android:layout_marginEnd="24dp"
+                                android:backgroundTint="@color/white"
+                                android:insetTop="0dp"
+                                android:insetBottom="0dp"
                                 android:ellipsize="end"
                                 android:singleLine="true"
                                 android:textAllCaps="true"
@@ -218,29 +228,39 @@
                             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                             tools:listitem="@layout/item_ingredient"
                             tools:itemCount="6"
-                            android:layout_marginTop="12dp"/>
+                            android:layout_marginHorizontal="24dp"
+                            android:layout_marginBottom="12dp"/>
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
-                            <ImageView
-                                android:id="@+id/imgDescription"
+                            <androidx.cardview.widget.CardView
                                 android:layout_width="match_parent"
                                 android:layout_height="0dp"
-                                app:imageUrl="@{viewModel.selectedProperty.img}"
-                                app:layout_constraintDimensionRatio="1:1"
-                                android:layout_marginVertical="10dp"
                                 app:layout_constraintTop_toTopOf="parent"
                                 app:layout_constraintLeft_toLeftOf="parent"
-                                app:layout_constraintRight_toRightOf="parent"/>
+                                app:layout_constraintRight_toRightOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintDimensionRatio="1:1"
+                                android:layout_marginVertical="10dp"
+                                android:layout_marginHorizontal="24dp"
+                                app:cardCornerRadius="8dp">
+                                <ImageView
+                                    android:id="@+id/imgDescription"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    app:imageUrl="@{viewModel.selectedProperty.img}" />
+                            </androidx.cardview.widget.CardView>
                         </androidx.constraintlayout.widget.ConstraintLayout>
-                        <androidx.appcompat.widget.AppCompatButton
+                        <com.google.android.material.button.MaterialButton
                             android:id="@+id/btn_select_image"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="16dp"
-                            app:layout_constraintTop_toBottomOf="@id/imgDescription"
-                            app:layout_constraintStart_toStartOf="parent"
-                            android:background="@drawable/rectangle_bg_deep_orange_a200_radius_6"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginBottom="16dp"
+                            android:layout_marginHorizontal="24dp"
+                            android:backgroundTint="@color/deep_orange_A200"
+                            android:insetBottom="0dp"
+                            android:insetTop="0dp"
                             android:ellipsize="end"
                             android:singleLine="true"
                             android:textAllCaps="true"
@@ -257,7 +277,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent">
-            <androidx.appcompat.widget.AppCompatButton
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_delete"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -265,8 +285,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/btn_save"
-                android:layout_marginRight="8dp"
-                android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_8"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:backgroundTint="@color/white"
+                android:insetTop="0dp"
+                android:insetBottom="0dp"
                 android:ellipsize="end"
                 android:singleLine="true"
                 android:textAllCaps="true"
@@ -276,7 +300,7 @@
                 android:onClick="@{() -> viewModel.onDeleteProduct()}"
                 tools:ignore="UnusedAttribute"
                 android:text="delete" />
-            <androidx.appcompat.widget.AppCompatButton
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_save"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -284,8 +308,12 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/btn_delete"
-                android:layout_marginLeft="8dp"
-                android:background="@drawable/rectangle_bg_blue_a200_radius_6"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginBottom="8dp"
+                android:backgroundTint="@color/blue_A200"
+                android:insetTop="0dp"
+                android:insetBottom="0dp"
                 android:ellipsize="end"
                 android:onClick="@{() -> viewModel.updateProductInfo()}"
                 android:singleLine="true"
