--- a/app/src/main/res/layout/fragment_new_product.xml
+++ b/app/src/main/res/layout/fragment_new_product.xml
@@ -12,14 +12,15 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white_A700"
-        android:padding="24dp">
+        android:background="@color/white_A700">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tvHeader"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:layout_margin="24dp"
+            android:paddingBottom="20dp"
             android:orientation="horizontal">
             <ImageView
                 android:id="@+id/imageChevronleft"
@@ -57,7 +58,7 @@
             android:clipToPadding="false"
             android:fillViewport="true"
             android:orientation="vertical"
-            android:layout_marginBottom="14dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintVertical_bias="0.0">
             <LinearLayout
                 android:orientation="vertical"
@@ -70,6 +71,7 @@
                     app:hintTextColor="@color/lightOrange"
                     app:boxStrokeColor="@color/lightOrange"
                     android:layout_marginTop="12dp"
+                    android:layout_marginHorizontal="24dp"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -94,6 +96,7 @@
                     app:hintTextColor="@color/lightOrange"
                     app:boxStrokeColor="@color/lightOrange"
                     android:layout_marginTop="12dp"
+                    android:layout_marginHorizontal="24dp"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -118,6 +121,7 @@
                     app:hintTextColor="@color/lightOrange"
                     app:boxStrokeColor="@color/lightOrange"
                     android:layout_marginTop="12dp"
+                    android:layout_marginHorizontal="24dp"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -137,8 +141,7 @@
                 </com.google.android.material.textfield.TextInputLayout>
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp">
+                    android:layout_height="wrap_content">
                     <EditText
                         android:id="@+id/etIngredient"
                         android:layout_width="wrap_content"
@@ -148,17 +151,22 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_marginVertical="12dp"
+                        android:layout_marginStart="24dp"
                         android:hint="Enter Ingredient"
                         android:text="@={viewmodel.ingredient}"
                         tools:ignore="HardcodedText"/>
-                    <androidx.appcompat.widget.AppCompatButton
+                    <com.google.android.material.button.MaterialButton
                         android:id="@+id/btn_add_ingredient"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:layout_constraintTop_toTopOf="@id/etIngredient"
                         app:layout_constraintBottom_toBottomOf="@id/etIngredient"
                         app:layout_constraintEnd_toEndOf="parent"
-                        android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_8"
+                        android:layout_marginEnd="24dp"
+                        android:insetTop="0dp"
+                        android:insetBottom="0dp"
+                        app:backgroundTint="@color/white"
                         android:ellipsize="end"
                         android:singleLine="true"
                         android:textAllCaps="true"
@@ -178,11 +186,10 @@
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     tools:listitem="@layout/item_ingredient"
                     tools:itemCount="6"
-                    android:layout_marginTop="12dp"/>
+                    android:layout_marginHorizontal="24dp"/>
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/constraintImgDescription"
                         android:layout_width="match_parent"
@@ -190,25 +197,38 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
-                        <ImageView
-                            android:id="@+id/imgDescription"
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/cardNewProductAvatar"
                             android:layout_width="wrap_content"
                             android:layout_height="0dp"
-                            app:imageUrl="@{viewmodel.image}"
                             app:layout_constraintDimensionRatio="1:1"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
-                            android:layout_marginVertical="10dp" />
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:layout_marginVertical="10dp"
+                            android:layout_marginHorizontal="24dp"
+                            app:cardCornerRadius="8dp">
+                            <ImageView
+                                android:id="@+id/imgDescription"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                app:imageUrl="@{viewmodel.image}"/>
+                        </androidx.cardview.widget.CardView>
                     </androidx.constraintlayout.widget.ConstraintLayout>
-                    <androidx.appcompat.widget.AppCompatButton
+                    <com.google.android.material.button.MaterialButton
                         android:id="@+id/btn_select_image"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="16dp"
+                        android:layout_marginHorizontal="24dp"
+                        android:insetTop="0dp"
+                        android:insetBottom="0dp"
                         app:layout_constraintTop_toBottomOf="@id/constraintImgDescription"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        android:background="@drawable/rectangle_bg_deep_orange_a200_radius_6"
+                        android:backgroundTint="@color/deep_orange_A200"
                         android:ellipsize="end"
                         android:singleLine="true"
                         android:textAllCaps="true"
@@ -218,16 +238,19 @@
                         tools:ignore="UnusedAttribute"
                         android:text="select image" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
-
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_confirm"
             android:layout_width="160dp"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:background="@drawable/rectangle_bg_blue_a200_radius_6"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="24dp"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:backgroundTint="@color/blue_A200"
             android:ellipsize="end"
             android:singleLine="true"
             android:textAllCaps="true"
