--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -16,16 +16,23 @@
         android:clickable="true"
         android:focusable="true"
         android:background="?attr/selectableItemBackground">
-        <ImageView android:id="@+id/imgAvatar"
-            android:layout_height="90dp"
-            android:layout_width="90dp"
-            android:scaleType="fitCenter"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardAvatar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:imageUrl="@{product.img}"
-            tools:src="@drawable/img_rectangle44"
-            tools:ignore="ContentDescription" />
+            app:cardCornerRadius="12dp">
+            <ImageView android:id="@+id/imgAvatar"
+                android:layout_height="90dp"
+                android:layout_width="90dp"
+                android:scaleType="fitCenter"
+                app:imageUrl="@{product.img}"
+                tools:src="@drawable/img_rectangle44"
+                tools:ignore="ContentDescription" />
+        </androidx.cardview.widget.CardView>
+
         <TextView
             android:ellipsize="end"
             android:id="@+id/tvEateryName"
@@ -34,7 +41,7 @@
             android:layout_width="0dp"
             android:singleLine="true"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imgAvatar"
+            app:layout_constraintStart_toEndOf="@+id/cardAvatar"
             app:layout_constraintTop_toTopOf="parent"
             android:textSize="16sp"
             android:textColor="@color/bluegray_700"
@@ -53,7 +60,7 @@
             android:layout_width="0dp"
             android:singleLine="true"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imgAvatar"
+            app:layout_constraintStart_toEndOf="@+id/cardAvatar"
             app:layout_constraintTop_toBottomOf="@+id/tvEateryName"
             android:textColor="@color/gray_500"
             android:textSize="12sp"
@@ -69,7 +76,7 @@
             android:layout_marginTop="20dp"
             android:layout_width="0dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imgAvatar"
+            app:layout_constraintStart_toEndOf="@+id/cardAvatar"
             app:layout_constraintTop_toBottomOf="@+id/tvIngredient"
             app:layout_constraintBottom_toBottomOf="parent">
             <TextView
