--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -77,6 +77,7 @@
                 android:background="@android:color/darker_gray" />
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_reviews"
                 app:icon="@drawable/ic_review"
                 app:iconSize="24dp"
                 android:layout_width="match_parent"
