--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -65,5 +65,17 @@
     <fragment
         android:id="@+id/navigation_profile"
         android:name="xyz.daijoubuteam.foodshoppingappadmin.ui.profile.ProfileFragment"
-        android:label="@string/title_profile" />
+        android:label="@string/title_profile" >
+        <action
+            android:id="@+id/action_navigation_profile_to_reviewsFragment"
+            app:destination="@id/reviewsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/reviewsFragment"
+        android:name="xyz.daijoubuteam.foodshoppingappadmin.ui.profile.reviews.ReviewsFragment"
+        android:label="ReviewsFragment" >
+        <action
+            android:id="@+id/action_reviewsFragment_to_navigation_profile"
+            app:destination="@id/navigation_profile" />
+    </fragment>
 </navigation>
