--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
-            name="viewmodel"
+            name="viewModel"
             type="xyz.daijoubuteam.foodshoppingappadmin.ui.report.ReportViewModel" />
     </data>
 
@@ -32,7 +32,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:fontFamily="@font/avenir_next_lt_pro"
-                android:text="@={viewmodel.month}"
+                android:text="@={viewModel.month}"
                 android:textColor="@color/black"
                 android:inputType="none"/>
         </com.google.android.material.textfield.TextInputLayout>
@@ -57,14 +57,41 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:fontFamily="@font/avenir_next_lt_pro"
-                android:text="@={viewmodel.year}"
+                android:text="@={viewModel.year}"
                 android:textColor="@color/black"
                 android:inputType="none" />
         </com.google.android.material.textfield.TextInputLayout>
+<!--        <androidx.core.widget.NestedScrollView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="0dp"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/etMonth"-->
+<!--            app:layout_constraintBottom_toTopOf="@id/cvSummary"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent">-->
+<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent">-->
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/ordersRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintTop_toBottomOf="@id/etMonth"
+                    app:layout_constraintBottom_toTopOf="@id/cvSummary"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:orientation="vertical"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:itemCount="10"
+                    tools:listitem="@layout/item_order" />
+<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
+<!--            -->
+<!--        </androidx.core.widget.NestedScrollView>-->
+
         <androidx.cardview.widget.CardView
+            android:id="@+id/cvSummary"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/etMonth"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="24dp"
@@ -79,7 +106,7 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:textSize="16sp"
+                    android:textSize="20sp"
                     android:textFontWeight="600"
                     android:text="@string/total_orders"
                     tools:ignore="UnusedAttribute" />
@@ -92,7 +119,7 @@
                     android:layout_marginStart="4dp"
                     android:textColor="@color/deep_orange_A200"
                     android:textStyle="bold"
-                    android:textSize="16sp"
+                    android:textSize="20sp"
                     tools:text="24" />
                 <TextView
                     android:id="@+id/tvTextTotalRevenue"
@@ -101,7 +128,7 @@
                     app:layout_constraintTop_toBottomOf="@id/tvTextTotalOrders"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginTop="8dp"
-                    android:textSize="16sp"
+                    android:textSize="20sp"
                     android:textFontWeight="600"
                     android:text="Total revenue:"
                     tools:ignore="UnusedAttribute" />
@@ -114,7 +141,7 @@
                     android:layout_marginStart="4dp"
                     android:textColor="@color/deep_orange_A200"
                     android:textStyle="bold"
-                    android:textSize="16sp"
+                    android:textSize="20sp"
                     tools:text="$ 24" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
